contrib/byacc/test/btyacc/err_inherit3.output
   0  $accept : declaration $end

   1  $$1 :

   2  $$2 :

   3  declaration : class type $$1 $$2 namelist

   4  $$3 :

   5  declaration : type $$3 locnamelist

   6  class : GLOBAL
   7        | LOCAL

   8  type : REAL
   9       | INTEGER

  10  $$4 :

  11  namelist : $$4 namelist NAME
  12           | NAME

  13  $$5 :

  14  locnamelist : $$5 $$2 namelist

state 0
	$accept : . declaration $end  (0)

	GLOBAL  shift 1
	LOCAL  shift 2
	REAL  shift 3
	INTEGER  shift 4
	.  error

	declaration  goto 5
	class  goto 6
	type  goto 7


state 1
	class : GLOBAL .  (6)

	.  reduce 6


state 2
	class : LOCAL .  (7)

	.  reduce 7


state 3
	type : REAL .  (8)

	.  reduce 8


state 4
	type : INTEGER .  (9)

	.  reduce 9


state 5
	$accept : declaration . $end  (0)

	$end  accept


state 6
	declaration : class . type $$1 $$2 namelist  (3)

	REAL  shift 3
	INTEGER  shift 4
	.  error

	type  goto 8


state 7
	declaration : type . $$3 locnamelist  (5)
	$$3 : .  (4)

	.  reduce 4

	$$3  goto 9


state 8
	declaration : class type . $$1 $$2 namelist  (3)
	$$1 : .  (1)

	.  reduce 1

	$$1  goto 10


state 9
	declaration : type $$3 . locnamelist  (5)
	$$5 : .  (13)

	.  reduce 13

	locnamelist  goto 11
	$$5  goto 12


state 10
	declaration : class type $$1 . $$2 namelist  (3)
	$$2 : .  (2)

	.  reduce 2

	$$2  goto 13


state 11
	declaration : type $$3 locnamelist .  (5)

	.  reduce 5


state 12
	locnamelist : $$5 . $$2 namelist  (14)
	$$2 : .  (2)

	.  reduce 2

	$$2  goto 14


13: shift/reduce conflict (shift 15, reduce 10) on NAME
state 13
	declaration : class type $$1 $$2 . namelist  (3)
	$$4 : .  (10)

	NAME  shift 15

	namelist  goto 16
	$$4  goto 17


14: shift/reduce conflict (shift 15, reduce 10) on NAME
state 14
	locnamelist : $$5 $$2 . namelist  (14)
	$$4 : .  (10)

	NAME  shift 15

	namelist  goto 18
	$$4  goto 17


state 15
	namelist : NAME .  (12)

	.  reduce 12


state 16
	declaration : class type $$1 $$2 namelist .  (3)

	.  reduce 3


17: shift/reduce conflict (shift 15, reduce 10) on NAME
state 17
	namelist : $$4 . namelist NAME  (11)
	$$4 : .  (10)

	NAME  shift 15

	namelist  goto 19
	$$4  goto 17


state 18
	locnamelist : $$5 $$2 namelist .  (14)

	.  reduce 14


state 19
	namelist : $$4 namelist . NAME  (11)

	NAME  shift 20
	.  error


state 20
	namelist : $$4 namelist NAME .  (11)

	.  reduce 11


Rules never reduced:
	$$4 :  (10)


State 13 contains 1 shift/reduce conflict.
State 14 contains 1 shift/reduce conflict.
State 17 contains 1 shift/reduce conflict.


7 terminals, 11 nonterminals
15 grammar rules, 21 states

grammar parser grammar
symbol# value# symbol
     0      0  $end
     1    256  error
     2    257  GLOBAL
     3    258  LOCAL
     4    259  REAL
     5    260  INTEGER
     6    261  NAME
     7    262  $accept
     8    263  declaration
     9    264  namelist
    10    265  locnamelist
    11    266  class
    12    267  type
    13    268  $$1
    14    269  $$2
    15    270  $$3
    16    271  $$4
    17    272  $$5
